[project]
name = "ComfyUI_PowerShiftScheduler"
description = 'Highly customizable Scheduler for ComfyUI.'
version = "1.0.4"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/silveroxides/ComfyUI_PowerShiftScheduler"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "silveroxides"
DisplayName = "ComfyUI Power Shift Scheduler"
Icon = "https://github.com/silveroxides/ComfyUI_PowerShiftScheduler/raw/refs/heads/main/assets/tools-icon.svg"
